--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,12 +37,12 @@ python-dateutil==2.8.2
 pytz==2024.1
 httpx==0.26.0
 
-# Testing
-pytest==8.0.0
-pytest-asyncio==0.23.4
-pytest-cov==4.1.0
+# Testing (dev only - comment out for production)
+# pytest==7.4.4
+# pytest-asyncio==0.23.4
+# pytest-cov==4.1.0
 
-# Development
-black==24.1.1
-ruff==0.2.0
-mypy==1.8.0
+# Development (dev only - comment out for production)
+# black==24.1.1
+# ruff==0.2.0
+# mypy==1.8.0
