--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,8 +25,9 @@ anthropic==0.18.0
 razorpay==1.4.1
 
 # Validation & Serialization
-pydantic==2.6.0
+pydantic[email]==2.6.0
 pydantic-settings==2.1.0
+email-validator==2.1.0
 
 # PDF Generation
 reportlab==4.1.0
