--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,6 +33,9 @@ email-validator==2.1.0
 reportlab==4.1.0
 weasyprint==60.2
 
+# Email Service
+resend==0.7.0
+
 # Utilities
 python-dateutil==2.8.2
 pytz==2024.1
