--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,9 @@ services:
   # Backend API
   - type: web
     name: astravaani-backend
-    runtime: python
+    runtime: docker
     rootDir: backend
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -23,10 +22,9 @@ services:
   # Frontend
   - type: web
     name: astravaani-frontend
-    runtime: node
+    runtime: docker
     rootDir: frontend
-    buildCommand: npm install && npm run build
-    startCommand: npm start -- -p $PORT
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: NEXT_PUBLIC_API_URL
         value: https://astravaani-backend.onrender.com/api/v1
