--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,5 +20,5 @@ COPY . .
 # Expose port (Railway uses $PORT)
 EXPOSE 8000
 
-# Run the application with dynamic port
-CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
+# Run migrations and start the application
+CMD alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
