Add production security hardening
- Add rate limiting on auth endpoints (login, register, OTP, password reset)
- Add security headers middleware (X-Frame-Options, X-Content-Type-Options, etc.)
- Fix OTP generation to use cryptographically secure secrets module
- Restrict CORS to specific methods and headers
- Disable DEBUG mode in render.yaml for production
- Hide API docs in production (only available when DEBUG=true)
- Remove OTP logging that could leak codes in production

--- a/render.yaml
+++ b/render.yaml
@@ -27,7 +27,7 @@ services:
       - key: CORS_ORIGINS
         value: '["https://astravaani-frontend.onrender.com","https://astravaani.com","https://www.astravaani.com"]'
       - key: DEBUG
-        value: "true"
+        value: "false"
 
   # Frontend
   - type: web
