--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,6 +41,9 @@ python-dateutil==2.8.2
 pytz==2024.1
 httpx==0.26.0
 
+# Security
+slowapi==0.1.9
+
 # Testing (dev only - comment out for production)
 # pytest==7.4.4
 # pytest-asyncio==0.23.4
